[tool.poetry]
name = "nfrankel-update"
version = "0.1.0"
description = ""
authors = ["Nicolas Fränkel <nicolas@frankel.ch>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pyyaml = "^6.0.1"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
types-requests = "^2.31.0.10"
types-pyyaml = "^6.0.12.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
